zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__screen_can_suppress_pane-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2854
expression: "format!(\"{}\", snapshot_count)"
---
2
