zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__screen_can_suppress_pane.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C): ─ Pane #1 ─────────────────────────────│─ Pane #2 ──────────────────────────────
01 (C):                                        │                                        
02 (C):                                        │                                        
03 (C):                                        │                                        
04 (C):                                        │                                        
05 (C):                                        │                                        
06 (C):                                        │                                        
07 (C):                                        │                                        
08 (C):                                        │                                        
09 (C):                                        │                                        
10 (C):                                        │                                        
11 (C):                                        │                                        
12 (C):                                        │                                        
13 (C):                                        │                                        
14 (C):                                        │                                        
15 (C):                                        │                                        
16 (C):                                        │                                        
17 (C):                                        │                                        
18 (C):                                        │                                        
19 (C):                                        │
