zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__screen_cannot_break_last_selectable_pane_to_a_new_tab-2.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 2775
expression: "format!(\"{}\", snapshot_count)"
---
1
