zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_change_floating_pane_coordinates_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 3727
expression: "format!(\"{}\", snapshot_count)"
---
2
